# Low-Level-Programming

./: README.md
Dictionary ASM/: README.md  colon.inc  dict.asm  lib.asm  lib.inc  main.asm  makefile  test.py  words.inc
IO Library ASM/: .gitignore  README.md  lib.inc
Image Rotation C/: .gitignore  README.md
Image Rotation C/solution/: compile_flags.txt
Lab1/: .gitignore  .gitlab-ci.yml  README.md  lib.inc  test.py  xmlrunner.py
Lab1/testLib/: lab1  lab1.asm  rsp usages
Lab2/: README.md  app  colon.inc  dict.asm  lib.asm  lib.inc  main.asm  makefile  words.inc
Lab3/: CMakeCache.txt  README.md
Lab3/solution/: CMakeLists.txt
Lab4/: README.md
Lab4/src/: mem.c
Lab5/: CMakeLists.txt  README.md
Lab5/include/: file_io.h  filter.h  image.h
Lab5/src/: CMakeLists.txt  compile_flags.txt
Lab5/src/asm/: filter.asm
Lab5/src/image/: file_io.c
Lab5/src/util/: enum_naming.c  util.c
Memory Allocator C/: CMakeLists.txt  README.md
Memory Allocator C/src/: CMakeLists.txt  main.c
Seminar3/: task4
Seminar3/task2/: lib.inc  main  main.asm
Seminar3/task3.5/: makefile
Sepia Filter (C, ASM)/: README.md
Sepia Filter (C, ASM)/src/: main.c
Sepia Filter C, ASM/include/: bmp.h  simd_filter.h  util.h
seminar2/: func_args.asm  lib.inc  parse_uint  test_string.py  test_uint.py
seminar3/task1/: q1.asm
seminar3/task2/: lib.asm
seminar3/task3/: makefile
seminar4/: Отчёт.docx
seminar5/: out  task1.c  task3.c  task4.c
seminar6/: heap-0.c  heap-1  heap-1.c
seminar7/: app  stack-smash  stack-smash.c  tail-rec.c
test/: test  test.asm
(+45 files in other folders)
